# SecureChatMVP

./: .gitignore  .replit  CIPHER_EXPLAINED.md  CODEBASE_EXPLANATION.md  ENCRYPTION_METHODS_DETAILED_GUIDE.md  ENCRYPTION_PPT_VERSION.md  OOP_CONCEPTS.md  OOP_CONCEPTS_DETAILED_REFERENCE.md  OOP_PPT_VERSION.md  PROJECT_OVERVIEW.md  README.md  replit.md
.ccls-cache/@@home@runner@workspace/: @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@configuration.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@e_os2.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@macros.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@opensslconf.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@opensslv.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@sha.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@m9b8ymw5rcjrjvy606pdj8whmbd5mhmq-jsoncpp-1.9.6-dev@include@json@allocator.h.blob  @nix@store@m9b8ymw5rcjrjvy606pdj8whmbd5mhmq-jsoncpp-1.9.6-dev@include@json@config.h.blob  (+252 more)
.ccls-cache/@home@runner@workspace/: server@src@XorCipher.cpp  (+22 more)
attached_assets/: Pasted-Short-answer-yes-that-Replit-summary-matches-your-brief-and-the-design-we-outlined-It-hits-the-req-1761921616463_1761921616463.txt  Pasted-You-are-an-expert-full-stack-engineer-Build-a-secure-chat-MVP-like-a-WhatsApp-style-console-web-sim-1761920691225_1761920691226.txt  Pasted-You-are-to-build-a-secure-chat-MVP-that-MUST-use-Backend-C-20-with-Drogon-WebSocket-relay-sma-1761921086346_1761921086347.txt
client/: package-lock.json  package.json  vite.config.ts
docs/: crypto-design.md  threat-model.md
server/: .env.example  CMakeLists.txt
server-cpp/: CMakeLists.txt  README.md
server-cpp/include/: MessageHandler.hpp  WebSocketServer.hpp  base64.hpp  sha1.hpp
server-cpp/src/: main.cpp
server/include/: CaesarCipher.hpp  IHasher.hpp  Sha256Hasher.hpp
server/src/: main.cpp
(+13 files in other folders)
